--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.13.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.12.4</version> <!-- Replace with the latest version -->
+		</dependency>
+
     </dependencies>
     
     <build>
